# codebook-cinema

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  COMPETITOR_SCAN.md  PRIVACY_AND_SECURITY.md  RELEASE_CHECKLIST.md
examples/python_cli/: health.py  main.py  settings.py  worker.py
examples/typescript_api/: health.ts  index.ts  router.ts  server.ts  types.ts
scripts/: demo.py  package_release.py  release_check.py  verify.py
src/codebook_cinema/: __init__.py  cli.py
src/codebook_cinema/adapters/: __init__.py  filesystem.py  source_parser.py
src/codebook_cinema/domain/: models.py  story.py
src/codebook_cinema/services/: analyze.py  render.py
src/codebook_cinema/templates/: storyboard.html.j2
tests/e2e/: test_cli.py
tests/integration/: test_filesystem.py
tests/unit/: test_render.py  test_source_parser.py  test_story.py
